fixing overflow

--- a/src/components/Intro/index.scss
+++ b/src/components/Intro/index.scss
@@ -1,5 +1,4 @@
 .intro-text {
-  padding: 3.5rem 5.5rem;
   min-height: 250px;
   margin: 0 auto;
   h1 {
